--- a/task2/package.json
+++ b/task2/package.json
@@ -1,8 +1,7 @@
 {
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "sequelize": "^6.32.1"
+    "body-parser": "^1.20.1",
+    "express": "^4.18.2"
   },
   "name": "express-postgress",
   "version": "1.0.0",
@@ -10,7 +9,7 @@
   "main": "app.js",
   "devDependencies": {},
   "scripts": {
-    "startdevel": "ENV_MODE=development node app.js",
+    "start": "ENV_MODE=development node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
