--- a/task4/package.json
+++ b/task4/package.json
@@ -1,9 +1,12 @@
 {
   "dependencies": {
     "body-parser": "^1.20.1",
-    "express": "^4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.1",
+    "sequelize": "^6.32.1"
   },
-  "name": "task2",
+  "name": "task4",
   "version": "1.0.0",
   "description": "example postgress express stack",
   "main": "app.js",
